tests/NormalTests/paczka1/fuzzy1/93412688.err
Error in line 21: 7fyLNGVvk A218 78,6
Error in line 31: 35pn72FcI S538 47,7
